yoshimi 2.3.2 M

Further refined crossfade action.
Changed internal note velocity to float.
Added internal note volume.

Performed initial separation of crossfade multiplier from fade type.

2024-6-2 Will
bn 2332
BugFix: Not saving root and bank changes.
Updated Control Data.

2024-5-26 Will
bn 2331
Changed crossfade ID to uchar crossfadeType ready for alternative types,
reading and retaining old saved xml bool type for backward compatibility.

Added superFat instument to 'companion' and updated user guide.


2024-5-24 Will
bn 2330
Updated some dev-notes.
Clarified microtonal error reporting.
Commented out test messages in updateConfig.

2024-5-6 Will
bn 2329
BugFix: Not updating 'banks_checked' in config file.

2024-5-3 Will
bn 2328
Updated config images in user guide.
Re-ordered early guide entries.
Added a proper 'Monochrome' button to themes.
Adjusted EQ window sizes to match others.

2024-4-24 Will
bn 2327
Applied instrument change GUI bugfix patch from Hermann.
Removed some now redundant config change notification code.

2024-4-21 Will
bn 2326
Removed all reference to singleRowPanel.
All currently defined config setting now immediate.
Updated GUI.
Disabled automatic config save on exit.
User manual location now properly integrated into config.

2024-4-19 Will
bn 2325
Structure of UpdateConfig now complete. Just details to fill in now.
Added missing Control Data entries.
Corrected some Control Data labels.
Collapsed config numbers from 'defaultStateStert' onwards.

2024-4-17 Will
Further revision of base config for better isolation and correctness.

2024-4-13 Will
bn 2324
Reorganised control values for config so all base ones are together
    and order in files matches list order.
Removed 'check_pad_synth' from config.
    It's not been relevant for years!
Most of base config now changed immediately.
Updated Control Data

2024-3-30 Will
bn 2323
CLI startup disabling GUI is now temporary and not marked changed.