@@ -1,5 +1,11 @@
 yoshimi 2.3.2 M
 
+2024-6-9 Will
+bn 2333
+Merged in crossfade branch.
+Updated CmakeLists.txt for min version 3.5
+Moved project name down below primary cmake commands.
+
 Further refined crossfade action.
 Changed internal note velocity to float.
 Added internal note volume.
